--- a/Our.html
+++ b/Our.html
@@ -181,6 +181,14 @@
      </div>
   </div>
 
+  <div class="beforegoerOuterCon">
+      <div class="beforeCon">
+      
+      </div>
+
+  </div>
+
+
   <div class="foregoerD">
       <div class="foregoerItemD">
           <div class="foregoerItemIntro">
@@ -856,6 +864,119 @@
               </a>
             </p>
         </div>
+    </div>
+  </div>
+
+  <div class="publicCourseOuterCon">
+    <div class="publicCourseCon fixedWidth">
+
+       <div class="publicImgCon">
+         <img src="images/our/publicLeft.png" class="publicImg" />
+       </div>
+
+       <div class="publicTextCon">
+          <div class="publicTitle">
+          公开课每周循环开讲
+          </div>
+          <div class="publicTitleImgCon">
+              <img src="images/our/publicTitleBack.png" class="publicTitleImg" />
+              <p class="publicTitleImgText">免费报名试听</p>
+          </div>
+
+          <div class="publicContextCon">
+            <div class="publicContextF">
+              <img src="images/our/publicContextF.png" class="publicContextBeforeImg" />
+              <span class="publicContextTxt">先体验再上课</span>
+            </div>
+            <div class="publicContextS">
+              先听课了解讲师水平，可根据需求选择不同课程
+            </div>
+          </div>
+
+          <div class="publicContextCon">
+            <div class="publicContextF">
+              <img src="images/our/publicContextS.png" class="publicContextBeforeImg" />
+              <span class="publicContextTxt">现场店铺答疑</span>
+            </div>
+            <div class="publicContextS">
+              实力讲师1对1指导，针对个性问题，现场解答
+            </div>
+          </div>
+
+          <div class="publicBtnCon">
+            <img src="images/our/publicBottomBtn.png" class="publicBtnImg" />
+          </div>
+
+       </div>
+    </div>
+
+  </div>
+
+  <!--报名-->
+  <div class="reportOuterCon">
+    <div class="reportCon ">
+
+       <div class="reportInnerCon">
+
+          <div class="reportTitleCon">
+             <img src="images/our/reportTitleBack.png" class="reportTitleBackImg" />
+             <div class="reportTitleTextCon">
+                <p>当然，你可以直接来</p>
+                <p>我们各个区域的机构报名学习</p>
+             </div>
+          </div>
+
+
+          <div class="reportContextCon">
+
+              <div class="reportLeftCon">
+                  <ul class="reportLeftUl">
+                     <li class="reportLeftLi">
+                         <span class="reportLiItem">培训地址</span>
+                         <div class="reportLiDiv">
+
+                             <p class="reportLiItemP">深圳:
+                             <span class="reportLiItemSpan">南山区前海路丽湾大厦16楼</span>
+                             </p>
+
+                              <p class="reportLiItemP">中山:
+                             <span class="reportLiItemSpan">东区富湾南路美居电商园C2栋4楼整层</span>
+                             </p>
+
+                              <p class="reportLiItemP">东莞:
+                             <span class="reportLiItemSpan">虎门镇太宝路虎门电商产业园1栋4楼1801</span>
+                             </p>
+
+                              <p class="reportLiItemP">汕头:
+                             <span class="reportLiItemSpan">高新区科技中路13号嘉泽大厦8B05/2A03</span>
+                             </p>
+                         </div>
+                     </li>
+                  </ul>
+
+              </div>
+
+              <div class="reportRightCon">
+                <div class="reportQcodeCon">
+                  <img src="images/our/qcode.png" class="QcodeImg"/>
+                </div>
+
+                <div class="reportCodeF">
+                  美女卡卡微信号：
+                </div>
+
+                <div class="QcodePhone">
+                  180&nbsp;2578&nbsp;0095
+                </div>
+
+                <div class="QcodeS">
+                  欢迎骚扰哦！
+                </div>
+              </div>
+
+          </div>
+
+       </div>
     </div>
   </div>
 
