--- a/borken.html
+++ b/borken.html
@@ -239,11 +239,11 @@
 	<div class="sixdaynightOuter">
 			<div class="sixdaynightCon">
 
-				<div class="sixdayItemGroupCon">
-					<div class="sixdayItem">
+				<div class="sixdayItemGroupCon ">
+					<div class="sixdayItem sixdayItemhover">
 						<div class="sixdayItemTop">
-							<div class="sixdayItemImgCon">
-								<img src="images/broken/dayidea1.png" class="sixdayItemImg" />
+							<div class="sixdayItemImgCon sixdayItemImgDay1">
+								<!-- <img src="images/broken/dayidea1.png" class="sixdayItemImg" /> -->
 							</div>
 							<div class="sixDayF">
 								Day01
@@ -252,14 +252,14 @@
 								数据化选品
 							</div>
 						</div>
-						<div class="hidetraingleD">
+						<div class="hidetraingleD hidetraingleDhover">
 						</div>
 					</div>
 
 					<div class="sixdayItem">
 						<div class="sixdayItemTop">
-							<div class="sixdayItemImgCon">
-								<img src="images/broken/dayidea2.png" class="sixdayItemImg" />
+							<div class="sixdayItemImgCon sixdayItemImgDay2">
+								<!-- <img src="images/broken/dayidea2.png" class="sixdayItemImg" /> -->
 							</div>
 							<div class="sixDayF">
 								Day02
@@ -274,8 +274,8 @@
 
 					<div class="sixdayItem">
 						<div class="sixdayItemTop">
-							<div class="sixdayItemImgCon">
-								<img src="images/broken/dayidea3.png" class="sixdayItemImg" />
+							<div class="sixdayItemImgCon sixdayItemImgDay3">
+								<!-- <img src="images/broken/dayidea3.png" class="sixdayItemImg" /> -->
 							</div>
 							<div class="sixDayF">
 								Day03
@@ -290,8 +290,8 @@
 
 					<div class="sixdayItem">
 						<div class="sixdayItemTop">
-							<div class="sixdayItemImgCon">
-								<img src="images/broken/dayidea4.png" class="sixdayItemImg" />
+							<div class="sixdayItemImgCon sixdayItemImgDay4">
+							<!-- 	<img src="images/broken/dayidea4.png" class="sixdayItemImg" /> -->
 							</div>
 							<div class="sixDayF">
 								Day04
@@ -306,8 +306,8 @@
 
 					<div class="sixdayItem">
 						<div class="sixdayItemTop">
-							<div class="sixdayItemImgCon">
-								<img src="images/broken/dayidea5.png" class="sixdayItemImg" />
+							<div class="sixdayItemImgCon sixdayItemImgDay5">
+								<!-- <img src="images/broken/dayidea5.png" class="sixdayItemImg" /> -->
 							</div>
 							<div class="sixDayF">
 								Day05
@@ -322,8 +322,8 @@
 
 					<div class="sixdayItem">
 						<div class="sixdayItemTop">
-							<div class="sixdayItemImgCon">
-								<img src="images/broken/dayidea6.png" class="sixdayItemImg" />
+							<div class="sixdayItemImgCon sixdayItemImgDay6">
+								<!-- <img src="images/broken/dayidea6.png" class="sixdayItemImg" /> -->
 							</div>
 							<div class="sixDayF">
 								Day06
@@ -337,33 +337,183 @@
 					</div>
 				</div>
 
-				<div class="dayShowCon">
-					<div class="dayShowItem">
-						<div class="dayShowItemTitle">
-							上午
+				<div class="dayShowOuterCon">
+
+					<div class="dayShowCon">
+						<div class="dayShowItem">
+							<div class="dayShowItemTitle">
+								上午
+							</div>
+							<div class="dayShowImgCon">
+								<img src="images/broken/sixday11.png" class="dayShowImg" />
+							</div>
 						</div>
-						<div class="dayShowImgCon">
-							<img src="" class="dayShowImg" />
+
+						<div class="dayShowItem">
+							<div class="dayShowItemTitle">
+								下午
+							</div>
+							<div class="dayShowImgCon">
+								<img src="images/broken/sixday12.png" class="dayShowImg" />
+							</div>
+						</div>
+
+						<div class="dayShowItem">
+							<div class="dayShowItemTitle">
+								晚上
+							</div>
+							<div class="dayShowImgCon">
+								<img src="images/broken/sixday13.png" class="dayShowImg" />
+							</div>
 						</div>
 					</div>
 
-					<div class="dayShowItem">
-						<div class="dayShowItemTitle">
-							下午
+					<div class="dayShowCon hidenDiv">
+						<div class="dayShowItem">
+							<div class="dayShowItemTitle">
+								上午
+							</div>
+							<div class="dayShowImgCon">
+								<img src="images/broken/sixday21.png" class="dayShowImg" />
+							</div>
 						</div>
-						<div class="dayShowImgCon">
-							<img src="" class="dayShowImg" />
+
+						<div class="dayShowItem">
+							<div class="dayShowItemTitle">
+								下午
+							</div>
+							<div class="dayShowImgCon">
+								<img src="images/broken/sixday22.png" class="dayShowImg" />
+							</div>
+						</div>
+
+						<div class="dayShowItem">
+							<div class="dayShowItemTitle">
+								晚上
+							</div>
+							<div class="dayShowImgCon">
+								<img src="images/broken/sixday23.png" class="dayShowImg" />
+							</div>
 						</div>
 					</div>
 
-					<div class="dayShowItem">
-						<div class="dayShowItemTitle">
-							晚上
+					<div class="dayShowCon hidenDiv">
+						<div class="dayShowItem">
+							<div class="dayShowItemTitle">
+								上午
+							</div>
+							<div class="dayShowImgCon">
+								<img src="images/broken/sixday31.png" class="dayShowImg" />
+							</div>
 						</div>
-						<div class="dayShowImgCon">
-							<img src="" class="dayShowImg" />
+
+						<div class="dayShowItem">
+							<div class="dayShowItemTitle">
+								下午
+							</div>
+							<div class="dayShowImgCon">
+								<img src="images/broken/sixday32.png" class="dayShowImg" />
+							</div>
+						</div>
+
+						<div class="dayShowItem">
+							<div class="dayShowItemTitle">
+								晚上
+							</div>
+							<div class="dayShowImgCon">
+								<img src="images/broken/sixday33.png" class="dayShowImg" />
+							</div>
 						</div>
 					</div>
+
+					<div class="dayShowCon hidenDiv">
+						<div class="dayShowItem">
+							<div class="dayShowItemTitle">
+								上午
+							</div>
+							<div class="dayShowImgCon">
+								<img src="images/broken/sixday41.png" class="dayShowImg" />
+							</div>
+						</div>
+
+						<div class="dayShowItem">
+							<div class="dayShowItemTitle">
+								下午
+							</div>
+							<div class="dayShowImgCon">
+								<img src="images/broken/sixday42.png" class="dayShowImg" />
+							</div>
+						</div>
+
+						<div class="dayShowItem">
+							<div class="dayShowItemTitle">
+								晚上
+							</div>
+							<div class="dayShowImgCon">
+								<img src="images/broken/sixday43.png" class="dayShowImg" />
+							</div>
+						</div>
+					</div>
+
+
+					<div class="dayShowCon hidenDiv">
+						<div class="dayShowItem">
+							<div class="dayShowItemTitle">
+								上午
+							</div>
+							<div class="dayShowImgCon">
+								<img src="images/broken/sixday51.png" class="dayShowImg" />
+							</div>
+						</div>
+
+						<div class="dayShowItem">
+							<div class="dayShowItemTitle">
+								下午
+							</div>
+							<div class="dayShowImgCon">
+								<img src="images/broken/sixday52.png" class="dayShowImg" />
+							</div>
+						</div>
+
+						<div class="dayShowItem">
+							<div class="dayShowItemTitle">
+								晚上
+							</div>
+							<div class="dayShowImgCon">
+								<img src="images/broken/sixday53.png" class="dayShowImg" />
+							</div>
+						</div>
+					</div>
+
+					<div class="dayShowCon hidenDiv">
+						<div class="dayShowItem">
+							<div class="dayShowItemTitle">
+								上午
+							</div>
+							<div class="dayShowImgCon">
+								<img src="images/broken/sixday61.png" class="dayShowImg" />
+							</div>
+						</div>
+
+						<div class="dayShowItem">
+							<div class="dayShowItemTitle">
+								下午
+							</div>
+							<div class="dayShowImgCon">
+								<img src="images/broken/sixday62.png" class="dayShowImg" />
+							</div>
+						</div>
+
+						<div class="dayShowItem">
+							<div class="dayShowItemTitle">
+								晚上
+							</div>
+							<div class="dayShowImgCon">
+								<img src="images/broken/sixday63.png" class="dayShowImg" />
+							</div>
+						</div>
+					</div>
+
 				</div>
 
 			</div>
@@ -897,5 +1047,11 @@
 
 </div> 
 
+
+
+  <script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
+  <script type="text/javascript" src="js/broken.js"></script>
+
 </body>
+
 </html>
