--- a/sell.html
+++ b/sell.html
@@ -160,7 +160,211 @@
       </div>
   </div>
 
+    <!-- 教练-->
+  <div class="coachOuterCon">
+      <div class="coachCon fixedWidth">
+          <div class="coachTitleCon">
+              <img src="images/sell/coachTitleImg.png" class="coachTitleImg" />
+          </div>
 
+          <!-- <div class="coachSubTitleCon">
+              为大促保驾护航
+          </div> -->
+
+          <div class="coachItemCon">
+              <div class="coachItem">
+                  <div class="coachItemIntroCon">
+                    <p>5年电商实操经验；</p>
+                    <p>炬鼎力破茧总教练；</p>
+                    <p>私家顾问教练；</p>
+                    <p>双十一单日销售额300w;</p>
+                     <p>双十二单日销售150W。</p>
+                    <p>擅长店铺运营、SEO搜索、活动策划。</p>
+                  </div>
+
+                  <div class="coachNameCon">
+                      长乐
+                  </div>
+              </div>
+
+               <div class="coachItem">
+                  <div class="coachItemIntroCon">
+                    <p>担任炬鼎力破茧\孵化课程教练；</p>
+                    <p>私人顾问教练；5年电商实战经验;</p>
+                    <p>曾操盘新品14天免费流量破20000，单店日销售额250000；</p>
+                    <p>擅长店铺运营、SEO搜索、活动策划。</p>
+                  </div>
+
+                  <div class="coachNameCon">
+                      大漠
+                  </div>
+              </div>
+
+               <div class="coachItem">
+                  <div class="coachItemIntroCon">
+                    <p>炬鼎力破茧教练；炬鼎力私家顾问教练；</p>
+                    <p>擅长直通车计划规划，数据分析；</p>
+                    <p>利用直通车推动单品7天搜索流量上千。</p>
+                  </div>
+
+                  <div class="coachNameCon">
+                      星  河
+                  </div>
+              </div>
+
+               <div class="coachItem">
+                  <div class="coachItemIntroCon">
+                    <p>三年电商实操运营经验； </p>
+                    <p>擅长店铺活动策划、无线个性化流量玩法、微淘以及淘宝客运用； </p>
+                    <p>涉及类目：家装家饰、服饰鞋包、鲜花园艺、厨房家电、女装等。</p>
+                  </div>
+
+                  <div class="coachNameCon">
+                      夜  澜
+                  </div>
+              </div>
+
+               <div class="coachItem">
+                  <div class="coachItemIntroCon">
+                    <p>卖盟学堂总教练；</p>
+                    <p>操作男装、灯饰、家具类目四天搜索破千；</p>
+                    <p>擅长SEO，数据化运营。</p>
+                  </div>
+
+                  <div class="coachNameCon">
+                      暮  黎
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+
+  <!--报名-->
+  <div class="learnPlanOuterCon">
+      <div class="learnPlanInerCon fixedWidth">
+            <!--3+3学习计划-->
+            <div class="learnPlanCon">
+                <div class="learPlanImgCon">
+                    <img src="images/sell/learnPlanTitle.png" class="learnPlanTitleImg"/>
+                </div>
+
+                <div class="learnPlanSubTitleCon">
+                    <img src="images/sell/learnPlanSubTitle.png" class="learnPlanSubTitleImg" />
+                </div>
+
+                <div class="learnPlanMidCon">
+                   <img src="images/sell/learnPlanMidImg.png" class="planMidImg" />
+                </div>
+
+                <div class="learnPlanMidBtnCon">
+                    <img src="images/sell/learnPlanBtn.png" class="learnBtnImg" />
+                </div>
+
+            </div>
+      </div>
+  </div>
+
+  <div class="reportOuterCon">
+    <div class="reportInnerCon">
+        <div class="reportTitleCon">
+            <img src="images/sell/reportTitleBackImg.png" class="reportTitleImg" />
+            <div class="reportTitle">报名信息</div>
+        </div>
+
+        <div class="reportContentCon">
+            <div class="reportContentLeftCon">
+                <ul class="reportContentUl">
+                    <li class="reportContentLi">
+                       课时:<span class="reportSpecial">3天</span>
+                    </li>
+
+                    <li class="reportContentLi">
+                       参训学员:<span class="reportSpecial">老板、运营（或推广）、美工</span>
+                    </li>
+
+                    <li class="reportContentLi">
+                       联系电话:<span class="reportSpecial">180&nbsp;2578&nbsp;0095</span>
+                    </li>
+
+                    <li class="reportContentLi">
+                       开班时间:<span class="reportSpecial">具体请咨询课程顾问</span>
+                    </li>
+                    <p class="reportGapLine">————</p>
+                    <li class="reportContentLi">
+                       培训地址
+                       <div class="reportSubContent">
+                          <p class="reportSubItemP">
+                              深圳:
+                              <span class="reportSubSpecial">深圳市南山区前海路丽湾大厦16楼
+                              </span>
+                          </p>
+
+                          <p class="reportSubItemP">
+                              中山:
+                              <span class="reportSubSpecial">中山市东区富湾南路美居电商园C2栋4楼整层
+                              </span>
+                          </p>
+
+                          <p class="reportSubItemP">
+                              东莞:
+                              <span class="reportSubSpecial">东莞市虎门镇太宝路虎门电商产业园1栋4楼1801
+                              </span>
+                          </p>
+
+                          <p class="reportSubItemP">
+                              汕头:
+                              <span class="reportSubSpecial">汕头市高新区科技中路13号嘉泽大厦8B05/2A03
+                              </span>
+                          </p>
+
+                       </div>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="reportQCodeCon">
+                 <div class="reportQcodeImgCon">
+                    <img src="images/sell/qcodeImg.png" class="QcodeImg"/>
+                 </div>
+
+                 <div class="QcodeF">
+                  美女卡卡微信号:
+                 </div>
+
+                 <div class="QcodeS">
+                  180&nbsp;2578&nbsp;0095
+                 </div>
+
+                 <div class="QCodeT">
+                  欢迎骚扰哦！
+                 </div>
+                 <div class="ContactCon">
+                    <img src="images/sell/contactus.png" class="ContactImg"/>
+                 </div>
+            </div>
+        </div>
+
+        <div class="reportContentBottomCon">
+            <div class="reportBottomF">
+              2017如果您还没有合适的CRM或ERP，炬鼎力帮您出钱！
+            </div>
+
+            <div class="reportBottomS">
+              报名炬鼎力“赢在双十一成蝶炬献班”课程的学员，即可享受数云CRM和聚水潭ERP价值15888元大礼包。
+            </div>
+
+            <div class="reportBottominfoT">
+              活动详细： 
+            </div>
+
+            <div class="reportBottonTextCon">
+                <p>1、数云福利：仅针对单独购买聚星云-客户运营平台数云定制版（即B版），原价10000元/店，现价5000元/店； </p>
+                <p>2、聚水潭福利：免费获得聚水潭ERP专业版（售价5888元/年），但聚水潭不提供上门培训实施服务。</p>
+            </div>
+        </div>
+
+    </div>
+  </div>
 
 </body>
 
