--- a/Our.html
+++ b/Our.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <title>炬鼎力教育</title>
-<meta http-equiv="Content" context="text/html;charset=utf-8" />
+
+<meta charset="UTF-8">
 
   <meta name="keywords" content="">
   <meta name="description" content="">
